--- a/vue/index.html
+++ b/vue/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full bg-gray-800">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/32/3069/3069318.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel App</title>
+    <title>Japan Travel App</title>
   </head>
   <body class="h-full">
     <div id="app"></div>
