--- a/vue/index.html
+++ b/vue/index.html
@@ -9,5 +9,6 @@
   <body class="h-full">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
